[Feature #165020127] Add pagination for ratings
